@@ -241,5 +241,6 @@ Apache/Nginx flags:
     -o = static optimization(optional)
     -x = enable host protection(optional)
     -l = list available websites
-    -w = wsgi config for python OR django
+    -w = wsgi config for python OR django (nginx/uwsgi)
     -b = basic auth. params=user:password
+    -v = VirtualEnv (available for python OR django)
