@@ -254,6 +254,7 @@ FTP флаги:
 	-l = показать список доступных хостов
     -w = wsgi/uwsgi конфиг для python или django
     -b = авторизация. аргумент вида=пользователь:пароль
+    -v = VirtualEnv (доступен для python или django)
 
 ********************************************************************************
 
