@@ -2,7 +2,6 @@ Before version 2.0 will be released:
     VSFTPD config for version >= 2.3.5
     Nginx / Ruby+RoR support
     Nginx / proxied hosts support
-    Virtualenv support
 
 Sometime:
     OpenVPN configuration
