@@ -13,6 +13,7 @@ NameVirtualHost *:%(port)s
 	ServerAdmin webmaster@%(hostname)s
 
 	SetEnv DJANGO_SETTINGS_MODULE new_django_project.settings
+	#SetEnv PYTHON_EGG_CACHE /var/tmp/egg
 	PythonInterpreter %(project_name)s
 
 	%(basic_auth)s
@@ -31,9 +32,10 @@ NameVirtualHost *:%(port)s
 
 	<Location "/">
 		SetHandler python-program
-		PythonHandler django.core.handlers.modpython
+		PythonHandler %(project_name)s
 		PythonDebug Off
 		PythonPath "['%(root)s'] + sys.path"
+		PythonPath "['%(root)s/venv/bin', '%(root)s'] + sys.path"
 	</Location>
 
 	<LocationMatch "^/(static|media|cache)/.">
