@@ -14,8 +14,14 @@ NameVirtualHost *:%(port)s
 
 	%(basic_auth)s
 
-	WSGIScriptAlias / %(root)s/wsgi.py
+	WSGIScriptReloading On
+	WSGIPassAuthorization On
+	WSGIDaemonProcess %(hostname)s python-path=%(root)s%(venv)s
+	WSGIProcessGroup %(hostname)s
+	WSGIScriptAlias / %(root)s/new_django_project/wsgi.py
+
 	# Put this lines in configuration file: /etc/apache2/mods-enabled/wsgi.conf
+	# WSGIReloadMechanism Process
 	# WSGIPythonOptimize 2
 	# WSGIDaemonProcess www-data processes=4 maximum-requests=200 threads=25 stack-size=524288
 	# WSGIProcessGroup www-data
