@@ -1,0 +1,32 @@
+NameVirtualHost *:%(port)s
+<VirtualHost *:%(port)s>
+
+	# RPAFenable On
+	# RPAFsethostname On
+	# RPAFproxy_ips 127.0.0.1
+
+	ServerSignature Off
+
+	DocumentRoot %(root)s
+	ServerName %(hostname)s
+	ServerAlias www.%(hostname)s
+	ServerAdmin webmaster@%(hostname)s
+
+	%(basic_auth)s
+
+	AddHandler mod_python .py
+
+	PythonDebug Off
+	PythonPath "['%(root)s/venv/bin', '%(root)s'] + sys.path"
+	PythonHandler %(project)s
+	DirectoryIndex index.py
+
+	#<Location /admin/>
+	#	RewriteEngine On
+	#	RewriteCond %%{HTTPS} off
+	#	RewriteRule (.*) https://%%{HTTP_HOST}%%{REQUEST_URI}
+	#</Location>
+
+	%(ssl_section)s
+	%(optimize)s
+</VirtualHost>
