@@ -14,6 +14,10 @@ NameVirtualHost *:%(port)s
 
 	%(basic_auth)s
 
+	WSGIScriptReloading On
+	WSGIPassAuthorization On
+	WSGIDaemonProcess %(hostname)s python-path=%(root)s%(venv)s
+	WSGIProcessGroup %(hostname)s
 	WSGIScriptAlias / %(root)s/index.py
 	# Put this lines in configuration file: /etc/apache2/mods-enabled/wsgi.conf
 	# WSGIPythonOptimize 2
