@@ -1,5 +1,6 @@
 [uwsgi]
 autoload = true
+vacuum = true
 log-date = true
 socket = %(socket_path)s
 process = 2
@@ -13,3 +14,6 @@ optimize = 2
 
 ; *** Uncomment one line below, if pid file really need. But it's bad idea. *** ;
 ; pidfile = %(pid_path)s
+
+virtualenv = %(root)s/venv
+pythonpath = ..
